[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/Begin/Sprites/Cartwheel.png" type="Texture" id=1]
[ext_resource path="res://Levels/Begin/Sprites/CartGold.gd" type="Script" id=2]
[ext_resource path="res://Levels/Begin/Sprites/MinecartGold.png" type="Texture" id=3]
[ext_resource path="res://Misc/Overlap/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc/Stats.tscn" type="PackedScene" id=5]

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( -19.8394, -5.78321, -19.9228, -2.02897, -16.1686, 12.8211, -17.2531, 13.1548, -17.0863, 17.9936, -15.084, 17.9936, -13.1652, 20.5799, -8.49324, 20.8302, -5.90699, 17.9936, 4.18774, 17.8268, 6.44028, 20.997, 10.6951, 21.0804, 13.3648, 18.1605, 15.7842, 17.9102, 15.7007, 13.1548, 14.783, 10.9857, 19.1213, -2.19583, 18.9544, -5.86664, 13.5476, -5.87334, 10.1222, -9.69247, 6.34243, -9.92871, 3.19263, -11.8973, 3.232, -13.5904, -3.57945, -13.7478, -11.9658, -6.97577, -15.9183, -6.11692 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1.45678, 13.5994 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7.6014, 15.7322 )

[sub_resource type="RayShape2D" id=9]
length = 6.0

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 17.4617, 11.743 )

[sub_resource type="Animation" id=12]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.0, -5.0, 1.0, -1.0, 0.5, -0.5, 0.0 ]
}

[node name="CartGold" type="KinematicBody2D"]
collision_layer = 16384
collision_mask = 16393
collision/safe_margin = 0.001
script = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 8 )

[node name="MineCart" type="Sprite" parent="."]
position = Vector2( -0.273612, 3.2513 )
texture = ExtResource( 3 )

[node name="Cartwheel" type="Sprite" parent="MineCart"]
position = Vector2( -10.3544, 13.0209 )
texture = ExtResource( 1 )

[node name="Cartwheel2" type="Sprite" parent="MineCart"]
position = Vector2( 8.549, 12.9542 )
rotation = 4.59545
texture = ExtResource( 1 )

[node name="LEFT" type="RayCast2D" parent="MineCart"]
position = Vector2( -17.1961, 16.4064 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 16385

[node name="RIGHT" type="RayCast2D" parent="MineCart"]
position = Vector2( 16.1354, 16.4064 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 16385

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -0.607679, -5.66358 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -0.836004, 5.71239 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.273612, 13.9663 )
shape = SubResource( 9 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 512
collision_mask = 64

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -0.419322, 5.99047 )
shape = SubResource( 11 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Hit = SubResource( 12 )

[node name="DropPos" type="Node2D" parent="."]
position = Vector2( 0, -10 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
